[gd_scene format=3 uid="uid://b2joqfsx7fgcv"]

[ext_resource type="Script" uid="uid://4fhlpgtn0dv7" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://cr2lk0nfph67s" path="res://wiki_averages.webp" id="2_0xm2m"]

[node name="Main" type="Control" unique_id=966124718 node_paths=PackedStringArray("label", "avg_needed_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ig7tw")
label = NodePath("PanelContainer/Label")
avg_needed_label = NodePath("PanelContainer2/Label")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=2016345845]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -501.0
offset_top = -158.0
offset_right = -416.0
offset_bottom = 313.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PanelContainer" unique_id=986030745]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 13
horizontal_alignment = 2

[node name="PanelContainer2" type="PanelContainer" parent="." unique_id=130664877]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 36.0
offset_top = -157.0
offset_right = 121.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PanelContainer2" unique_id=755449957]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 13

[node name="Button" type="Button" parent="." unique_id=1846272642]
layout_mode = 1
offset_left = 23.0
offset_top = 26.0
offset_right = 184.0
offset_bottom = 73.0
text = "Calculate averages"

[node name="QuotasDone" type="LineEdit" parent="." unique_id=1915902499]
visible = false
layout_mode = 0
offset_left = 989.0
offset_top = 40.0
offset_right = 1130.0
offset_bottom = 76.0
placeholder_text = "quotas_done"
alignment = 1

[node name="TotalLuck" type="LineEdit" parent="." unique_id=1076775794]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -375.0
offset_top = 23.0
offset_right = -24.0
offset_bottom = 59.0
grow_horizontal = 0
placeholder_text = "total_luck [0;0.1545] (default: 0.0)"
alignment = 1

[node name="StartingQuota" type="LineEdit" parent="." unique_id=1615421528]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -375.0
offset_top = 80.0
offset_right = -24.0
offset_bottom = 116.0
grow_horizontal = 0
placeholder_text = "starting quota (default: 130.0)"
alignment = 1

[node name="BaseIncrease" type="LineEdit" parent="." unique_id=1631911344]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -375.0
offset_top = 134.0
offset_right = -24.0
offset_bottom = 170.0
grow_horizontal = 0
placeholder_text = "base_increase (default: 100.0)"
alignment = 1

[node name="Steepness" type="LineEdit" parent="." unique_id=662752157]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -375.0
offset_top = 185.0
offset_right = -24.0
offset_bottom = 221.0
grow_horizontal = 0
placeholder_text = "steepness (default: 16.0)"
alignment = 1

[node name="CurveMultiplier" type="LineEdit" parent="." unique_id=874600752]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -375.0
offset_top = 237.0
offset_right = -24.0
offset_bottom = 273.0
grow_horizontal = 0
placeholder_text = "curve_multiplier (default: 1.0)"
alignment = 1

[node name="AmountRuns" type="LineEdit" parent="." unique_id=2132152590]
layout_mode = 1
offset_left = 191.0
offset_top = 32.0
offset_right = 545.0
offset_bottom = 68.0
placeholder_text = "amount of runs simulated (default: 10000)"
alignment = 1

[node name="Label" type="Label" parent="." unique_id=484438891]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -401.0
offset_top = -237.0
offset_right = 21.0
offset_bottom = -214.0
grow_horizontal = 2
grow_vertical = 2
text = "Wiki averages (@ 0 luck):"
horizontal_alignment = 1

[node name="LinkButton" type="LinkButton" parent="." unique_id=1119937531]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -407.0
offset_top = -211.0
offset_right = 15.0
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 2
text = "https://lethal-company.fandom.com/wiki/Profit_Quota"
underline = 1
uri = "https://lethal-company.fandom.com/wiki/Profit_Quota"

[node name="TextureRect" type="TextureRect" parent="." unique_id=486977662]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -415.0
offset_top = -180.0
offset_right = 35.0
offset_bottom = 262.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0xm2m")

[node name="PanelContainer3" type="PanelContainer" parent="." unique_id=629576842]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -452.0
offset_top = 287.0
offset_right = -3.0
offset_bottom = 424.0
grow_horizontal = 0

[node name="Label2" type="Label" parent="PanelContainer3" unique_id=991327731]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 13
text = "Formula (quota increase):

base_increase * (curve_multiplier + pow(times_fulfilled, 2) / steepness) *
	(randomizer_curve[randf_range(0.0, 1.0) * absf(total_luck - 1)] + 1)"
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="text_changed" from="QuotasDone" to="." method="_on_quotas_done_text_changed"]
[connection signal="text_changed" from="TotalLuck" to="." method="_on_total_luck_text_changed"]
[connection signal="text_changed" from="StartingQuota" to="." method="_on_starting_quota_text_changed"]
[connection signal="text_changed" from="BaseIncrease" to="." method="_on_base_increase_text_changed"]
[connection signal="text_changed" from="Steepness" to="." method="_on_steepness_text_changed"]
[connection signal="text_changed" from="CurveMultiplier" to="." method="_on_curve_multiplier_text_changed"]
[connection signal="text_changed" from="AmountRuns" to="." method="_on_amount_runs_text_changed"]
